# vol-surface-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: data.yaml  neural.yaml  scanner.yaml  svi.yaml
dashboard/: index.html
dashboard/css/: styles.css
dashboard/data/: backtest.json  greeks.json  heston.json  mc.json  meta.json  regime.json  resampler.json  stress.json  surface.json  term_structure.json  violations.json
dashboard/js/: controls.js  live-region.js  main.js  panels.js  surface.js  violations-table.js
report/: build_report.py
scripts/: run_pipeline.sh
src/vol_scanner/: __init__.py  cli.py
src/vol_scanner/backtest/: __init__.py  rolling.py
src/vol_scanner/data/: __init__.py  io.py  synthetic.py
src/vol_scanner/figures/: __init__.py  fig_extensions.py  fig_residuals.py  fig_surface.py  fig_violations.py
src/vol_scanner/greeks/: __init__.py  finite_difference.py
src/vol_scanner/heston/: __init__.py  calibrate.py  pricer.py
src/vol_scanner/mc/: __init__.py  heston_mc.py
src/vol_scanner/metrics/: __init__.py  coverage.py  errors.py
src/vol_scanner/neural/: __init__.py  residual_net.py  train.py
src/vol_scanner/pipeline/: run.py
src/vol_scanner/regime/: __init__.py  classifier.py
src/vol_scanner/resampler/: __init__.py  project.py
src/vol_scanner/scanner/: __init__.py  arbitrage.py
tests/: test_arbitrage_scanner.py  test_extensions.py  test_heston.py  test_pipeline_smoke.py  test_svi_constraints.py  test_svi_fit.py  test_synthetic_determinism.py
(+10 files in other folders)
